--- a/scss/drupal-bootstrap/component/_field.scss
+++ b/scss/drupal-bootstrap/component/_field.scss
@@ -13,7 +13,9 @@
 .field--label-inline .field--label,
 .field--label-inline > .field--item,
 .field--label-inline .field--items {
-  padding-right: 0.5em;
+  display: inline;
+  float: none;
+  padding-right: 0;
 }
 [dir="rtl"] .field--label-inline .field--label,
 [dir="rtl"] .field--label-inline .field--items {
